# xnat_pipeline_client

./: .gitignore  CHANGELOG.md  CLAUDE.md  EXAMPLE_USAGE.md  MANIFEST.in  README.md  USAGE_GUIDE.md  pyproject.toml
examples/: README.md  example1_local_dry_run.sh  example2_dcm2niix_dry_run.sh  example3_batch_dry_run.sh  example4_python_single.py  example5_python_batch.py  example6_remote_debug.py  example7_remote_dcm2niix.py  example8_queue_batch.py  example9_remote_scan_queue.py
src/xnat_pipelines/: __init__.py  batch.py  cli.py  containers.py  dashboard.py  executor.py  io_utils.py  schema_mapping.py
src/xnat_pipelines/backends/: local.py  remote.py
src/xnat_pipelines/examples/: README.md  __init__.py  xnat_pipelines_monitoring_jupyterhub.ipynb
src/xnat_pipelines/examples/dcm2niix/: README.md  command.json  contexts.json
src/xnat_pipelines/examples/debug_command/: README.md  command.json  contexts.json
tests/: test_batch_runner.py  test_cli.py  test_dashboard.py  test_executor.py  test_import.py  test_io_utils.py  test_local_backend.py  test_remote_backend.py  test_schema_mapping.py
