
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xnat_pipelines"
version = "0.6.1"
description = "XNAT companion: discovery, dual-mode exec, batch, retries, full I/O staging + schema-aware input mapping + HTML dashboard."
readme = "README.md"
authors = [{name="XNATWorks", email="info@xnatworks.io"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "xnat>=0.5.0",
    "typing-extensions>=4.0.0"
]

[project.scripts]
xnat-pipelines = "xnat_pipelines.cli:main"
xnat-pipelines-dashboard = "xnat_pipelines.dashboard:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
